@@ -7,6 +7,9 @@ Revision history for Plack-Middleware-Statsd
   [Other]
   - Removed redundant import.
 
+  [Other]
+  - Added GitHub Actions to run tests.
+
 v0.6.1    2022-09-02 16:05:17+01:00 Europe/London
   [Other]
   - Signed distribution.
